fixed the weird overflow

--- a/styles/common.css
+++ b/styles/common.css
@@ -2,6 +2,7 @@ body {
     display: grid;
     grid-template-rows: 5fr 1fr;
     background-color: black;
+    height: 100%;
 }
 
 
@@ -47,14 +48,14 @@ li {
     position: absolute;
     overflow: hidden;
     width: 100px;
-    height: 100%;
+    height: 90%;
 }
 
 nav {
     position: relative;
     left: -100px;
     width: 100px;
-    height: 100%;
+    height: inherit;
     transition: 1s;
     overflow: visible;
     background-color: rgba(32, 32, 32, 0.534);
@@ -101,4 +102,24 @@ li {
 
 .list {
     height: 100%;
+}
+
+footer {
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    background-color: white;
+    z-index: 3;
+    color: darkgray;
+}
+
+div {
+    margin-left: 90px;
+    margin-right: 90px;
+    width: 100%;
+    border-top: 1px darkgray solid;
+}
+
+.footer {
+    width: 800px;
 }
